--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 .nav_logo > img:last-child {
-    display: none;
+  display: none;
 }
 
 .nav_search {
@@ -34,7 +34,7 @@ body {
   height: 2.5rem;
   padding: 0.5rem;
   align-items: center;
-  gap: .375rem;
+  gap: 0.375rem;
   border-radius: 0.5rem;
   border: 1px solid #616161;
   background: #303030;
@@ -42,145 +42,239 @@ body {
 }
 
 .nav_search:hover {
-    border-color: #E1E1E1;
+  border-color: #e1e1e1;
 }
 
 .nav_search > input {
-    background-color: transparent;
-    border: none;
-    padding: .5rem  0;
-    width: 90%;
-    color: #B5B5B5;
+  background-color: transparent;
+  border: none;
+  padding: 0.5rem 0;
+  width: 90%;
+  color: #b5b5b5;
 }
 
 .nav_search > input:focus {
-    border: none;
-    outline: none;
+  border: none;
+  outline: none;
 }
 
 .nav_search:has(input:focus) {
-    border-color: #fff;
-    border-width: 2px;
+  border-color: #fff;
+  border-width: 2px;
 }
 
-.nav_search >input::placeholder {
-    color: #B5B5B5;
-    font-family: "Inter", sans-serif;
-    font-size: 1rem;
+.nav_search > input::placeholder {
+  color: #b5b5b5;
+  font-family: "Inter", sans-serif;
+  font-size: 1rem;
 }
-
 
 .nav_notification {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: .5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
 }
 
 .nav_notification > svg {
-    border-radius: 0.5rem;
-    padding: .3rem;
-    background-color: #303030;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  background-color: #303030;
 }
 
 .nav_notification > svg:hover {
-    background-color: #656266;
+  background-color: #656266;
 }
 
 .nav_button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: .5rem;
-    padding: .1rem .1rem .1rem .5rem;
-    background-color: #303030;
-    border-radius: .5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 0.1rem 0.1rem 0.1rem 0.5rem;
+  background-color: #303030;
+  border-radius: 0.5rem;
 }
 
 .nav_button:hover {
-    background-color: #656266;
+  background-color: #656266;
 }
 
 .nav_button > p {
-    margin: 0;
-    color: #B5B5B5;
+  margin: 0;
+  color: #b5b5b5;
 }
 
 .nav_button p:last-child {
-    background-color: #36FBA1;
-    padding: .5rem;
-    border-radius: 0.375rem;
-    color: rgba(0, 0, 0, 0.40);
+  background-color: #36fba1;
+  padding: 0.5rem;
+  border-radius: 0.375rem;
+  color: rgba(0, 0, 0, 0.4);
 }
 
 @media screen and (max-width: 992px) {
-    .nav_search {
-        width: 20rem;
-    }
+  .nav_search {
+    width: 20rem;
+  }
 }
 
 @media screen and (max-width: 768px) {
+  .nav_search {
+    width: 15rem;
+  }
 
-    .nav_search {
-        width: 15rem;
-    }
+  .nav_logo > img:first-child {
+    display: none;
+  }
 
-    .nav_logo > img:first-child {
-        display: none;
-    }
+  .nav_logo > img:last-child {
+    display: block;
+  }
 
-    .nav_logo > img:last-child {
-        display: block;
-    }
+  .nav_button {
+    padding: 0;
+  }
 
-    .nav_button {
-        padding: 0;
-    }
-
-    .nav_button > p:first-child {
-        display: none;
-    }
+  .nav_button > p:first-child {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 480px) {
+  .nav_container {
+    padding: 0.75rem 0.5rem;
+  }
 
-    .nav_container {
-        padding: .75rem .5rem;
-    }
+  .nav_search {
+    height: 2rem;
+  }
 
-    .nav_search {
-        height: 2rem;
-    }
+  .nav_notification > svg {
+    width: 20px;
+    height: 20px;
+    background-color: transparent;
+    padding: 0.2rem;
+  }
 
-    .nav_notification > svg {
-        width: 20px;
-        height: 20px;
-        background-color: transparent;
-        padding: .2rem;
-    }
+  .nav_button > p:last-child {
+    font-size: 0.8rem;
+    padding: 0.4rem;
+  }
 
-    .nav_button > p:last-child {
-        font-size: .8rem;
-        padding: .4rem;
-    }
+  .nav_search {
+    width: 58%;
+  }
 
-    .nav_search {
-        width: 58%;
-    }
+  .nav_search > input::placeholder {
+    font-size: 0.8rem;
+  }
 
-    .nav_search > input::placeholder {
-        font-size: .8rem;
-    }
-
-    .nav_search > svg {
-        width: 13px;
-        height: 13px;
-    }
-
+  .nav_search > svg {
+    width: 13px;
+    height: 13px;
+  }
 }
 
 @media screen and (max-width: 300px) {
-    .nav_search {
-        width: 55%;
-    }
+  .nav_search {
+    width: 55%;
+  }
 }
+
+/* navbar dropdown menu */
+.menu {
+  width: 25rem;
+  padding: 0.3rem 0;
+  box-sizing: border-box;
+  border-radius: 0.875rem;
+  border: 1px solid #dbdbdb;
+  background-color: #fff;
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.05);
+
+  position: fixed;
+  top: 4.5rem;
+  right: 1rem;
+}
+
+hr {
+  /* background-color: rgba(225, 225, 225, 1); */
+  border: 0.5px solid rgba(225, 225, 225, 1);
+}
+
+.menu p {
+  margin: 0;
+}
+
+.menu_section1 {
+  /* padding: .5rem; */
+  box-sizing: border-box;
+  padding: 0 0.4rem;
+}
+
+.menu_section1-dc {
+  border-radius: 0.5rem;
+  background-color: #f1f1f1;
+  padding: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  box-sizing: border-box;
+  font-weight: 600;
+}
+
+.menu_section1-dc > svg {
+  margin-left: auto;
+  color: rgba(48, 48, 48, 1);
+}
+
+/* .menu_section1-dc > P {
+  margin: 0;
+} */
+
+.menu_section1-dc > p:first-child {
+  background-color: #36fba1;
+  padding: 0.5rem;
+  border-radius: 0.375rem;
+  color: rgba(0, 0, 0, 0.4);
+  font-weight: 400;
+}
+
+.menu_section1-stories {
+  padding: 0.5rem;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.menu_section2 {
+  margin: 0.8rem 0;
+  padding-left: 0.7rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.menu_section3 {
+  margin: 0.8rem 0;
+  padding-left: 0.7rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.menu_section3-email > p:first-child {
+  font-weight: 500;
+}
+
+.menu_section3-email > p:last-child {
+  color: #616161;
+  font-size: 0.8rem;
+}
+
+/* .test {
+  border-radius: 0.5rem;
+  border: 2px solid #005bd3;
+  padding: .5rem 0;
+} */
